Postpone JS calls from CoreOobeHandler until the JS side gets initialized

This fixes a race between loading JavaScript code and calling methods from it.

The race was caused by CoreOobeHandler class whose methods (like ReloadContent)
called JavaScript methods directly, while there was a possibility that JavaScript
files defining them were not loaded yet.
This was observed, for example, when running tests inherited from
LoginManagerTest, as the form of the following errors printed into console:
* [ERROR:CONSOLE(1)] "Uncaught ReferenceError: cr is not defined", source:  (1)
* [ERROR:CONSOLE(1)] "Uncaught TypeError: Cannot read property 'reloadContent'
  of undefined", source:  (1)

This CL adds a new condition that doesn't allow to call JS methods until
'screenStateInitialize' message is received from JS side. Any attempts to call
JS method too early are deferred and executed when the 'screenStateInitialize'
is finally received.

BUG=614805
TEST=manual: run login-related tests and check that no JavaScript errors appear in the console.

Review-Url: https://codereview.chromium.org/2042283002
Cr-Commit-Position: refs/heads/master@{#398342}

Former-commit-id: e873b56e4b1cec5bdb3ccf6e8b7ccd5e97d94c37